testing docu, readme, spec readability

--- a/README
+++ b/README
@@ -20,6 +20,9 @@ A working Hyper Estraier instance, setup instructions:
 * http://hyperestraier.sourceforge.net/nguide-en.html
 * http://pragmatig.wordpress.com/2008/05/06/getting-started-with-acts_as_searchable-on-ubuntu/
 
+At http://localhost:1978/ create one node for every model you want to use.
+When node_prefix(or node) in you config.yml is 'xx_test' then you have to create 
+xx_test_articles and xx_test_pages to index Article and Page (node + table_name).
 
 == Install
 
